--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -122,6 +122,7 @@
     // Адаптивность для мобильных устройств
     @media (max-width: 768px) {
         padding-inline: 15px;
+        text-align: center;
 
         .menu--toggle{
             display: flex;
@@ -166,6 +167,7 @@
     @media (max-width: 480px) {
         height: 60px;
         padding-inline: 10px;
+        text-align: center;
 
         .logo{
             height: 70%;
