--- a/src/components/reviews/index.scss
+++ b/src/components/reviews/index.scss
@@ -182,6 +182,7 @@
     // Адаптивность для мобильных устройств
     @media (max-width: 768px) {
         padding: 20px 0;
+        text-align: center;
 
         &--container {
             gap: 25px;
@@ -227,6 +228,8 @@
 
     // Адаптивность для маленьких мобильных
     @media (max-width: 480px) {
+        text-align: center;
+
         &--stats {
             .stats--item {
                 .stats--rating {
