--- a/src/components/services/service-item/index.scss
+++ b/src/components/services/service-item/index.scss
@@ -101,6 +101,7 @@
     }
 
     @media (max-width: 768px) {
+        text-align: center;
         min-height: 120px;
         padding: $g_lg * 1.5;
 
