--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -2,7 +2,6 @@
 
 .footer {
     width: 100%;
-    padding: 0 20px;
 
     &--container {
         width: 100%;
@@ -161,10 +160,9 @@
     }
 
     &--map {
-        margin-top: 40px;
+        margin-top: $g_lg;
         width: 100%;
         margin-inline: auto;
-        padding: 0 20px;
 
         .map--title {
             @include txt($fz_title_sm, $color_txt, $fw_bold);
@@ -260,7 +258,6 @@
 
     // Адаптивность для мобильных устройств
     @media (max-width: 768px) {
-        margin-top: 60px;
         padding: 0 10px;
         text-align: center;
 
