--- a/src/components/team/index.scss
+++ b/src/components/team/index.scss
@@ -20,6 +20,7 @@
         gap: 20px;
         overflow-x: auto;
         padding: 10px 0;
+        padding-left: 5px;
         
         &::-webkit-scrollbar {
             height: 4px;
